# enterprise-rag-architecture

./: .gitignore  README.md  package-lock.json  package.json  pyrightconfig.json  turbo.json
apps/api/: .env.example  main.py  package.json  pyproject.toml
apps/api/config/: settings.py
apps/api/models/: chat_models.py  document_models.py
apps/api/routers/: chat.py  documents.py
apps/api/scripts/: create_search_index.py
apps/api/services/: generation_service.py  query_service.py  reranking_service.py  retrieval_service.py
apps/api/utils/: azure_clients.py
apps/web/: drizzle.config.ts  package.json  proxy.ts
apps/web/app/: globals.css  layout.tsx
apps/web/app/(app)/: layout.tsx  new-chat.tsx  (+1 more)
apps/web/components/: app-sidebar.tsx  chat-history-list.tsx  header-context.tsx  theme-toggle.tsx  workspace-switcher.tsx
apps/web/hooks/: use-streaming-chat.ts
apps/web/lib/: api-client.ts  auth.ts  id.ts  types.ts
databricks/: databricks.yml  requirements.txt
databricks/config/: dev.yml  prod.yml  staging.yml
databricks/notebooks/: 01_document_parsing.py  02_chunking.py  03_embedding_generation.py  04_indexing.py
databricks/utils/: azure_clients.py
docs/: PLAN.md
evaluation/: pyproject.toml  run.py
scripts/: check-azure-login.sh  setup.sh
terraform/: main.tf  outputs.tf  rbac.tf  terraform.tfvars.example  variables.tf
terraform/modules/ai-foundry/: main.tf  outputs.tf  variables.tf
terraform/modules/azure-search/: main.tf  outputs.tf
terraform/modules/document-intelligence/: main.tf  outputs.tf
terraform/modules/storage/: outputs.tf
(+33 files in other folders)
